# rl-baselines3-zoo

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  MUJOCO_LOG.TXT  Makefile  None.monitor.csv  README.md  RandomForestModel_Web_attacks.ipynb  approb_model_real_data.ipynb  benchmark.md  best_hyperparameters.py  best_trials.py  chrono.py  detailed_results.npy  enjoy.py  enjoy_sbx.py  eval_hyperparameters.py  evaluate_hyperparameter.sh  notes.txt  optimize_hyperparameters.sh  parse_hyperparameters.py  plot_results.ipynb  pyproject.toml  render.py  render_optimization_policies.py  requirements.txt  results_real.npy  results_test.npy  results_val.npy  run.sh  run_best_hyperparameters.sh  run_eval1.sh  run_eval1b.sh  run_eval2.sh  run_eval2b.sh  (+16 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  issue-template.md  question.yml
.github/workflows/: ci.yml  trained_agents.yml
.ipynb_checkpoints/: approb_model_real_data-checkpoint.ipynb  cicids2017webattacks_model_approbation-checkpoint.ipynb  creating_dataset-checkpoint.ipynb
blind_walking/envs/: env_builder.py  locomotion_gym_config.py  locomotion_gym_env.py
blind_walking/examples/: random_action.py  test_env_gui.py  whole_body_controller_example.py
blind_walking/robots/: a1.py  a1_robot.py  a1_robot_velocity_estimator.py  action_filter.py  kinematics.py  laikago.py  laikago_constants.py  laikago_motor.py  minitaur.py  minitaur_constants.py  minitaur_motor.py  robot_config.py  robot_pose_utils.py
blind_walking/utilities/: pose3d.py
cpp/: .gitignore  CMakeLists.txt  model_template.cpp  model_template.h
cpp/cmake/: CMakeRC.cmake
cpp/include/baselines3_models/: predictor.h  preprocessing.h
cpp/src/: predict.cpp
cpp/src/baselines3_models/: predictor.cpp  preprocessing.cpp
docker/: Dockerfile  entrypoint.sh
docs/: Makefile  README.md  conda_env.yml  conf.py  index.rst  spelling_wordlist.txt
docs/guide/: config.md  config.rst  custom_env.md  custom_env.rst  enjoy.md  enjoy.rst  examples.rst  install.md  install.rst  integrations.md  integrations.rst  plot.md  plot.rst  quickstart.md  quickstart.rst  sbx.md  sbx.rst  train.md  train.rst  tuning.md  tuning.rst
docs/misc/: changelog.md  (+1 more)
hyperparams/: a2c.yml  ars.yml  cem.yml  cmaes.yml  crossq.yml  ddpg.yml  dqn.yml  her.yml  human.yml  iqn.yml  ppo.yml  ppo_lstm.yml  ppo_python_config_example.py  qrdqn.yml  reinforce.yml  sac.yml  sac_sbx.yml  td3.yml  teleop.yml  tqc.yml  trpo.yml
logs/: report_sde_MountainCarContinuous-v0_500-trials-50000-tpe-median_1581693633.csv
rl_zoo/: __init__.py  benchmark.py  cli.py  enjoy.py  exp_manager.py  hyperparams_opt.py  import_envs.py  load_from_hub.py  push_to_hub.py  record_training.py  record_video.py  train.py  utils.py
rl_zoo3/: DataGetter.py  SingleAssetTradingEnvironment.py  __init__.py  benchmark.py  callbacks.py  cli.py  enjoy.py  exp_manager.py  git_tools.py  gym_patches.py  hyperparams_opt.py  import_envs.py  load_from_hub.py  mlflow.py  mlflow_callbacks.py  push_to_hub.py  record_training.py  record_video.py  teleop.py  track.py  train.py  utils.py  vec_env_wrappers.py  version.txt  wrappers.py
scripts/: all_plots.py  build_docker.sh  create_cluster_jobs.py  create_mujoco_jobs.py  migrate_to_hub.py  parse_study.py  plot_from_file.py  plot_train.py  plot_training_success.py  record_video_a1_ppo.sh  run_docker_cpu.sh  run_docker_gpu.sh  run_jobs.py  run_tests.sh  score_normalization.py  train_a1_ppo.sh
tests/: README.md  test_callbacks.py  test_config.yml  test_enjoy.py  test_hyperparams_opt.py  test_train.py  test_wrappers.py
utils/: __init__.py  all_plots.py  benchmark.py  callbacks.py  cpp_exporter.py  custom_policies.py  exp_manager.py  hyperparams_opt.py  import_envs.py  launch_jobs.py  load_from_hf.py  load_from_hub.py  networks.py  noise.py  plot.py  policies.py  pretrain.py  push_to_hub.py  record_training.py  record_video.py  teleop.py  utils.py  wrappers.py
(+309 files in other folders)
