[metadata]
# This includes the license file in the wheel.
license_files = LICENSE

[tool:pytest]
filterwarnings =
    # Tensorboard warnings
    ignore::DeprecationWarning:tensorboard
    # Gym warnings
    ignore::UserWarning:gym
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    serial

[pytype]
inputs = .

[flake8]
ignore = W503,W504,E203,E231  # line breaks before and after binary operators
# Ignore import not used when aliases are defined
per-file-ignores =
  ./rl_zoo3/__init__.py:F401
  ./rl_zoo3/plots/__init__.py:F401
  ./rl_zoo3/import_envs.py:F401
  ./rl_zoo3/plots/all_plots.py:E501
  ./rl_zoo3/plots/plot_train.py:E501

exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
max-complexity = 15
# The GitHub editor is 127 chars wide
max-line-length = 127

[isort]
profile = black
line_length = 127
src_paths = stable_baselines3,rl_zoo3
